fixed mobile layout issues on home page, fixed a lot of the mobile menu issues (but not all), added toolbar region for logged in user toolbar

--- a/css/custom.css
+++ b/css/custom.css
@@ -58,38 +58,44 @@ border-radius: 8px; /* future proofing */
 /**menu and nav styles**/
 
 #navbar-main {
-  background-color: #333333;
+  background-color: #000;
+  border-bottom:1px solid #e3e3e3;
+  padding:0px;
 }
 
 .breadcrumb{
   background-color:#fff;
 }
 
-#navbar-top{
-  background-color:#000;
-  border-bottom: 1px solid #ccc;
+.menu--main, .menu--account, .menu--tools{
+  padding:0px;
 }
 
-.navbar-dark .navbar-brand{
-  font-size: 1.5em;
-  color:#4dffb8;
-  margin-left: 14px;
+.menu--main{
+  padding-left:8px;
 }
+
+.menu--main ul > li:first-of-type{
+  font-size: 1.4em;
+  margin-right:5px;
+  position:relative;
+  bottom:3px;
+}
+
+.menu--main ul li:nth-child(n+2)
+ {
+  position:relative;
+  top:5px;
+    }
 
 .menu--tools{
   display:block;
   width:100%;
-  height:50px;
-  background-color:#000;
-  border-bottom: 1px solid #ccc;
-}
-
-.menu--account{
-  padding-left:0px;
-}
-
-.menu--main{
-  padding-right:0px;
+  font-size: .8em;
+  height:38px;
+  background-color:#333333;
+  padding-left:16px;
+  margin-bottom:16px;
 }
 
 .menu--tools a,
@@ -111,13 +117,11 @@ border-radius: 8px; /* future proofing */
   color:#fff;
 }
 
-.highlighted .container-fluid{
-  padding-left:0px;
-  padding-right:0px;
-}
 
 .block-views-exposed-filter-blocksolr-search-content-page-1{
-  position:relative;
+  display:block;
+  float:right;
+  position: relative;
   top:10px;
 }
 
